# CoWorker

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.en.md  README.md  SECURITY.md  SECURITY.zh-CN.md  docker-compose.yaml  providers.json.example  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  container-release.yml  coworker-desktop-release.yml
apps/coworker-desktop/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/coworker-desktop/desktop/src-tauri/capabilities/: default.json
apps/coworker-desktop/desktop/src-tauri/icons/: icon.icns
apps/coworker-desktop/desktop/src-tauri/src/: lib.rs  main.rs
docs/: README.en.md  README.md  api-and-channels.en.md  api-and-channels.md  concepts.en.md  concepts.md  configuration.en.md  configuration.md  data-boundaries.en.md  data-boundaries.md  desktop.en.md  desktop.md  development.en.md  development.md
examples/: api.py  api_test.html  chat.html
scripts/: bump_version.py  check_version.py  cleanup.py  configure_tauri_updater.py
src/coworker/: __main__.py  version.py
tests/: conftest.py
tests/unit/: test_admin_api.py  test_alarm_tools.py  test_api.py  test_attachments.py  test_brain.py  test_browser_tools.py  test_bubble.py  test_bubble_router.py  test_bump_version.py  test_code_tools.py  test_config_export.py  test_configure_tauri_updater.py  test_desktop_dispatcher.py  test_desktop_registry.py  test_documentation.py  test_event_collector.py  test_inbox_watcher.py  (+25 more)
web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
(+159 files in other folders)
