[package]
name = "coworker-desktop-app"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "coworker_desktop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "coworker-desktop-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
coworker-desktop-core = { path = "../../bridge" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-drag = "2.1.1"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1.52", features = ["process", "sync", "time"] }
tracing = "0.1"
url = "2"
